--- a/cluster/apps/kasten-io/k10/profiles/k10-disaster-recovery.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/k10-disaster-recovery.yaml
@@ -11,6 +11,7 @@ spec:
         profile:
           name: b2-k3s-k10
           namespace: kasten-io
+  createdBy: kasten-io:k10-k10
   frequency: "@hourly"
   retention:
     daily: 1
