--- a/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - secret.sops.yaml
   - backblaze-b2.yaml
-  # - k10-disaster-recovery.yaml
+  - k10-disaster-recovery.yaml
   - k10-media-backups.yaml
