--- a/cluster/apps/kasten-io/k10/policies/default.yaml
+++ b/cluster/apps/kasten-io/k10/policies/default.yaml
@@ -2,7 +2,7 @@
 apiVersion: config.kio.kasten.io/v1alpha1
 kind: Policy
 metadata:
-  name: media
+  name: default
   namespace: kasten-io
 spec:
   frequency: "@daily"
@@ -38,4 +38,4 @@ spec:
       - key: k10.kasten.io/appNamespace
         operator: In
         values:
-          - media
+          - default
