--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -28,6 +28,7 @@ spec:
       DATABASE_PASS: "{{ .Values.postgresql.postgresqlPassword }}"
       DATABASE_NAME: "{{ .Values.postgresql.postgresqlDatabase }}"
       DISABLE_MQTT: "false"
+      MQTT_HOST: "mqtt://mosquitto"
     service:
       main:
         ports:
