--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -26,7 +26,7 @@ stringData:
     SECRET_S3_REGION: ENC[AES256_GCM,data:Zd4fjM1sy5mqp4w=,iv:+IpfWISxDJj9A80wUzV2pJTy0qZw5kwWUuGsH1pqJzw=,tag:siuH2IKHQElJaHH9CIMKVg==,type:str]
     SECRET_TESLAMATE_DB: ENC[AES256_GCM,data:b81mdC1zpNymKD/wVonCTnkv4ig=,iv:Unkm48fj1VPsonD24OL3lHtT2lEk0hE3piTt1eCLFEA=,tag:Q+zdT2muXLg2bxOTKrDc/w==,type:str]
     SECRET_TESLAMATE_PASS: ENC[AES256_GCM,data:IR8ZX3vubW7Hj6HN0sBeo/70+9A=,iv:WVjxqta2Nb6cyByuGzL5lXglZa1fHaTaA+RYNdSMJTU=,tag:lkHmOpgwrDUdcmA+xm2uTg==,type:str]
-    SECRET_TESLAMATE_USER: ENC[AES256_GCM,data:+aWN7TSULd3Bh3JCCAdIqR4ydKE=,iv:9VYwzRwcnJoi9Yt/3Srap4ESlpEw3fQgwYIWrHzNUHc=,tag:JLY3v+vLQUEiwH028ooYzA==,type:str]
+    SECRET_TESLAMATE_USER: ENC[AES256_GCM,data:PVGnlihzyzo=,iv:gjMJ1f4435DkMuj7kNqCwwgDzap5McxEP/qcKjEO5Mo=,tag:NL9JSykIZYZ4S0sgG4iiRA==,type:str]
     SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:JIA388qNJDBwmU4167c2TWQu3A==,iv:FmXpzQe82wYJmU+SuTUENHmOCnHXP2SyCME1DyOaZa4=,tag:DO5FL61+0WNjyWAEhdX/bA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_PASS: ENC[AES256_GCM,data:RDJ3UIeZwzGIEag4VTZgczEwVSk=,iv:RZBJqnMl1iSnALodFCTS9EAkNy93vFzW6iTMWxgUB94=,tag:riNAFefsFIgt36GEhZ/7rA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_USER: ENC[AES256_GCM,data:c6yjOiaBg8mYSsTnB4bbjw==,iv:/vW0o+/iHNMK9l7E+OiKsmK2N7BUcODgkrHzLPtZJD4=,tag:h211xMSoLx0whXAmoa1umA==,type:str]
@@ -48,8 +48,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-28T13:28:15Z"
-    mac: ENC[AES256_GCM,data:IywlShbALlF/JCwIOOSwNgeKYAvYUhv7BhPjDrqtvzNhNgSHRlQ3ot55+HIKVhOFK2X4Zh+z+MNP4Cf/5lcHCSR1pPUAQbrzewlup57SWgnfR7FSeegFz969nCEiUwXQ6h97lSCRZ4reh0DGgvZD3l8TiFqgkUKZvnJhDgC3nzM=,iv:jkUvOJB5iy7Umqd1RaQNNalw/o8WiTcZeZGQqGSfh/0=,tag:ruI3E+jXG/m5BP+sl9snPg==,type:str]
+    lastmodified: "2022-04-28T14:04:38Z"
+    mac: ENC[AES256_GCM,data:4WSrzRS6SHZscrH57ecoyodBOa0ltF7o2XUQsNTK8qHHu2FphmV2SfLYBiKVRtifNNJKpzF5xbsuXESZ6yn/s+GU551Pg+i5xqRy4nEGzyt6l5mY5uSi1ORB4kAdML6Hkf51UpmQEnt6PxcJm9uty17G5+96Qg3ydbNvnvN8q88=,iv:bnjojoozHVv1Y+LtQOInHywJcvzqQC/3AMqFrmiDK0o=,tag:W+wXDjSE19p7x+UhxdqoPw==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
