--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -55,9 +55,12 @@ spec:
         mountPath: /opt/app/import
     postgresql:
       enabled: true
-      postgresqlUsername: "${SECRET_TESLAMATE_USER}"
-      postgresqlPassword: "${SECRET_TESLAMATE_PASS}"
-      postgresqlDatabase: "${SECRET_TESLAMATE_DB}"
+      # postgresqlUsername: "${SECRET_TESLAMATE_USER}"
+      # postgresqlPassword: "${SECRET_TESLAMATE_PASS}"
+      # postgresqlDatabase: "${SECRET_TESLAMATE_DB}"
+      postgresqlUsername: postgres
+      postgresqlPassword: teslamate-pass
+      postgresqlDatabase: teslamate
       persistence:
         enabled: true
         existingClaim: teslamate-db-v1
