--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -24,7 +24,7 @@ stringData:
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
     SECRET_S3_DOMAIN: ENC[AES256_GCM,data:iF2rQq90lZU8jAgb/NenyqWKLYJmnHeTwtQj,iv:FcYlX/1EtbvYbGp4O3o8XujVlxx7KX20I53G4HdpRM8=,tag:rfpPoIdBJaeMA6j2k8liTQ==,type:str]
     SECRET_S3_REGION: ENC[AES256_GCM,data:Zd4fjM1sy5mqp4w=,iv:+IpfWISxDJj9A80wUzV2pJTy0qZw5kwWUuGsH1pqJzw=,tag:siuH2IKHQElJaHH9CIMKVg==,type:str]
-    SECRET_TESLAMATE_DB: ENC[AES256_GCM,data:b81mdC1zpNymKD/wVonCTnkv4ig=,iv:Unkm48fj1VPsonD24OL3lHtT2lEk0hE3piTt1eCLFEA=,tag:Q+zdT2muXLg2bxOTKrDc/w==,type:str]
+    SECRET_TESLAMATE_DB: ENC[AES256_GCM,data:mfj4fykKzEiB,iv:DMpGVcKTnfB6IbPCecE8OsBdzDmyjQnGZBI+7Vgicac=,tag:70eXceZsvwM477McUxrj1A==,type:str]
     SECRET_TESLAMATE_PASS: ENC[AES256_GCM,data:IR8ZX3vubW7Hj6HN0sBeo/70+9A=,iv:WVjxqta2Nb6cyByuGzL5lXglZa1fHaTaA+RYNdSMJTU=,tag:lkHmOpgwrDUdcmA+xm2uTg==,type:str]
     SECRET_TESLAMATE_USER: ENC[AES256_GCM,data:PVGnlihzyzo=,iv:gjMJ1f4435DkMuj7kNqCwwgDzap5McxEP/qcKjEO5Mo=,tag:NL9JSykIZYZ4S0sgG4iiRA==,type:str]
     SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:JIA388qNJDBwmU4167c2TWQu3A==,iv:FmXpzQe82wYJmU+SuTUENHmOCnHXP2SyCME1DyOaZa4=,tag:DO5FL61+0WNjyWAEhdX/bA==,type:str]
@@ -48,8 +48,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-28T14:04:38Z"
-    mac: ENC[AES256_GCM,data:4WSrzRS6SHZscrH57ecoyodBOa0ltF7o2XUQsNTK8qHHu2FphmV2SfLYBiKVRtifNNJKpzF5xbsuXESZ6yn/s+GU551Pg+i5xqRy4nEGzyt6l5mY5uSi1ORB4kAdML6Hkf51UpmQEnt6PxcJm9uty17G5+96Qg3ydbNvnvN8q88=,iv:bnjojoozHVv1Y+LtQOInHywJcvzqQC/3AMqFrmiDK0o=,tag:W+wXDjSE19p7x+UhxdqoPw==,type:str]
+    lastmodified: "2022-04-28T15:05:40Z"
+    mac: ENC[AES256_GCM,data:+qSnLj57xDZUjSawx5xLl6bRgwb51wQB2eC8Yj3f+W8THjoTY48mE3xHrvJupDN5uko4jNwpmYNwIZfoCWZC5+94fjR1pDVDsnxpQ7+w/n/c0jMh+jvnje6UpOhSeGTPYZV0p0yMM3QvfoINCJA0yulO8hlDswVXVa4RrVj/uLg=,iv:z6Jbt4r6Rt9GJfAxVF+Wedy4/eB60lSvcS2brpQ/Y1g=,tag:2xUJ9L3pvQb/F5Dhif2ByQ==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
