--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -55,6 +55,9 @@ spec:
         mountPath: /opt/app/import
     postgresql:
       enabled: true
+      image:
+        repository: postgres
+        tag: "13.6"
       postgresqlUsername: "${SECRET_TESLAMATE_USER}"
       postgresqlPassword: "${SECRET_TESLAMATE_PASS}"
       postgresqlDatabase: "${SECRET_TESLAMATE_DB}"
