--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -58,9 +58,12 @@ spec:
       image:
         # repository: postgres
         tag: "13.6.0"
-      postgresqlUsername: "${SECRET_TESLAMATE_USER}"
-      postgresqlPassword: "${SECRET_TESLAMATE_PASS}"
-      postgresqlDatabase: "${SECRET_TESLAMATE_DB}"
+        # postgresqlUsername: "${SECRET_TESLAMATE_USER}"
+        # postgresqlPassword: "${SECRET_TESLAMATE_PASS}"
+        # postgresqlDatabase: "${SECRET_TESLAMATE_DB}"
+        postgresqlUsername: postgres
+        postgresqlPassword: teslamate-pass
+        postgresqlDatabase: teslamate
       persistence:
         enabled: true
         existingClaim: teslamate-db-v1
