--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
       DATABASE_USER: "{{ .Values.postgresql.postgresqlUsername }}"
       DATABASE_PASS: "{{ .Values.postgresql.postgresqlPassword }}"
       DATABASE_NAME: "{{ .Values.postgresql.postgresqlDatabase }}"
-      DISABLE_MQTT: "false"
+      DISABLE_MQTT: "true"
       MQTT_HOST: "mosquitto.home"
       MQTT_USERNAME: "${SECRET_MQTT_USERNAME}"
       MQTT_PASSWORD: "${SECRET_MQTT_PASSWORD}"
