--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -18,18 +18,22 @@ stringData:
     SECRET_LOKI_ACCESS_KEY: ENC[AES256_GCM,data:a7mbL2+nVSdFgBy8EHQGH8/ZroHkpErIXQ==,iv:1pwhHJAjXOnD68MVEMG9rweNLZWf0RuoFr86A5Wcb4c=,tag:cDVsj52f8R/XsBLk98mhlg==,type:str]
     SECRET_LOKI_BUCKET: ENC[AES256_GCM,data:oTjdUOXNa4A=,iv:3lBSTgwCYMXeUjoTtx9Z7pArdha1CAau+0QRucq9m/o=,tag:aGRx9xYdfrSYKKAV8Fi2gA==,type:str]
     SECRET_LOKI_SECRET_KEY: ENC[AES256_GCM,data:bWtqSS0qbN2oh23qTIYauJI678CxKQuL30+Mk7fdYA==,iv:3/3/8IebRrPHV8zrZri59zca/D2j6IUeldUe8ZNVU/U=,tag:NfKIMvambbLam8Jvs+rdtA==,type:str]
-    SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:w0aLm/NzK499LYooTw==,iv:n0cLJbLm9ANH4cr6zOC1S8o0AjLC2Ysy/tFJH9Ue0WY=,tag:aJlWfUaHKK9cjtgcLR58Mw==,type:str]
-    SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:BR/GzXlWE/17U6+30Q==,iv:/s8ejzX70Z2P7aHbX+5uCB0yaFqtNs1QclLRIdk/Lsw=,tag:wKHhO1KJD/FZH+zSvT6tww==,type:str]
+    SECRET_HASSIO_MQTT_PASSWORD: ENC[AES256_GCM,data:/DmkZdLUYY8CR+8f6thqHyn4708=,iv:bAdxLefFqOC1meulgaPLsRukdJn1Dm8gTUGGYgSwRGU=,tag:1GcHBBBWO0YMGDAUv+5lew==,type:str]
+    SECRET_HASSIO_MQTT_USERNAME: ENC[AES256_GCM,data:AuJq5aNp,iv:XjW+sBXUZSgam24Rwi8RcQUziHAktLbCn0OFJZ2TFSg=,tag:vNInAJQo+mqcnvU2F2kFSQ==,type:str]
     SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
     SECRET_S3_DOMAIN: ENC[AES256_GCM,data:iF2rQq90lZU8jAgb/NenyqWKLYJmnHeTwtQj,iv:FcYlX/1EtbvYbGp4O3o8XujVlxx7KX20I53G4HdpRM8=,tag:rfpPoIdBJaeMA6j2k8liTQ==,type:str]
     SECRET_S3_REGION: ENC[AES256_GCM,data:Zd4fjM1sy5mqp4w=,iv:+IpfWISxDJj9A80wUzV2pJTy0qZw5kwWUuGsH1pqJzw=,tag:siuH2IKHQElJaHH9CIMKVg==,type:str]
     SECRET_TESLAMATE_DB: ENC[AES256_GCM,data:mfj4fykKzEiB,iv:DMpGVcKTnfB6IbPCecE8OsBdzDmyjQnGZBI+7Vgicac=,tag:70eXceZsvwM477McUxrj1A==,type:str]
+    SECRET_TESLAMATE_MQTT_PASSWORD: ENC[AES256_GCM,data:4GOCLUq6c11Q1oqp3qv7CJp2w/g=,iv:CzjUs5UPaKqkvnZAJAj4DzpeDbI6tFSBU/OYOMYhGDU=,tag:TT9ii7VZ8/nvQianOLhlgQ==,type:str]
+    SECRET_TESLAMATE_MQTT_USERNAME: ENC[AES256_GCM,data:XzNdlwy0NefM,iv:aeKS1fEVED2BA72+85/r9hg+pvBcRkFcUQE2z5mQPOk=,tag:A/B1ARrUsgypRft94F1Anw==,type:str]
     SECRET_TESLAMATE_PASS: ENC[AES256_GCM,data:IR8ZX3vubW7Hj6HN0sBeo/70+9A=,iv:WVjxqta2Nb6cyByuGzL5lXglZa1fHaTaA+RYNdSMJTU=,tag:lkHmOpgwrDUdcmA+xm2uTg==,type:str]
     SECRET_TESLAMATE_USER: ENC[AES256_GCM,data:PVGnlihzyzo=,iv:gjMJ1f4435DkMuj7kNqCwwgDzap5McxEP/qcKjEO5Mo=,tag:NL9JSykIZYZ4S0sgG4iiRA==,type:str]
     SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:JIA388qNJDBwmU4167c2TWQu3A==,iv:FmXpzQe82wYJmU+SuTUENHmOCnHXP2SyCME1DyOaZa4=,tag:DO5FL61+0WNjyWAEhdX/bA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_PASS: ENC[AES256_GCM,data:RDJ3UIeZwzGIEag4VTZgczEwVSk=,iv:RZBJqnMl1iSnALodFCTS9EAkNy93vFzW6iTMWxgUB94=,tag:riNAFefsFIgt36GEhZ/7rA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_USER: ENC[AES256_GCM,data:c6yjOiaBg8mYSsTnB4bbjw==,iv:/vW0o+/iHNMK9l7E+OiKsmK2N7BUcODgkrHzLPtZJD4=,tag:h211xMSoLx0whXAmoa1umA==,type:str]
+    SECRET_ZIGBEE_MQTT_PASSWORD: ENC[AES256_GCM,data:SDb5V18fRlLS6/2OHpMvFQsC/U8=,iv:DZBsje8JbAkSJmrkFsv2kK3tW2DaRIoI8VBXnHAoGmk=,tag:41q7cPbPr1dKhEbgT4frSA==,type:str]
+    SECRET_ZIGBEE_MQTT_USERNAME: ENC[AES256_GCM,data:yrX8v5E6r7HPINk=,iv:gwE99mjJr2HYl923yWFDFRIWr6lGWCva2pK6YnTpL+4=,tag:xLfomlwjA5LNhSwN5j7mfg==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -48,8 +52,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-28T15:05:40Z"
-    mac: ENC[AES256_GCM,data:+qSnLj57xDZUjSawx5xLl6bRgwb51wQB2eC8Yj3f+W8THjoTY48mE3xHrvJupDN5uko4jNwpmYNwIZfoCWZC5+94fjR1pDVDsnxpQ7+w/n/c0jMh+jvnje6UpOhSeGTPYZV0p0yMM3QvfoINCJA0yulO8hlDswVXVa4RrVj/uLg=,iv:z6Jbt4r6Rt9GJfAxVF+Wedy4/eB60lSvcS2brpQ/Y1g=,tag:2xUJ9L3pvQb/F5Dhif2ByQ==,type:str]
+    lastmodified: "2022-04-28T16:51:22Z"
+    mac: ENC[AES256_GCM,data:U5XHIq4pk2v2ghXAsU9pXeX9laEm66kcfRYBKwnLIcxCTlRG6viuR5Vj/T3iI4TQQYJGQgwnycBTjnjvyV05nuUkhXvizbKHiEOIPFUcyKuRElNuy94xef5vEE212+vqJGOfGpmJR8aXXIZqBpWIRbxjyJtH3s2RsmupvhQfzpE=,iv:xMrEFlHKqpDVFD88iz8RBCTGEISOm0T/Y2E98OUXhRg=,tag:yrPtjCJYY8IGbD0lxQcIFw==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
