--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -58,8 +58,8 @@ spec:
       mqtt:
         base_topic: zigbee2mqtt
         server: "mqtt://mosquitto"
-        user: "${SECRET_MQTT_USERNAME}"
-        password: "${SECRET_MQTT_PASSWORD}"
+        user: "${SECRET_ZIGBEE_MQTT_USERNAME}"
+        password: "${SECRET_ZIGBEE_MQTT_PASSWORD}"
       serial:
         port: "tcp://192.168.1.90:6638"
       advanced:
