--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -78,7 +78,7 @@ spec:
           - name: TeslaMate
             type: postgres
             access: proxy
-            url: teslamate-postgresql.home
+            url: teslamate-postgresql.home:5432
             database: "${SECRET_TESLAMATE_DB}"
             user: "${SECRET_TESLAMATE_USER}"
             secureJsonData:
