--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -13,22 +13,22 @@ stringData:
     SECRET_GHOST_DOMAIN: ENC[AES256_GCM,data:1PNJEvtkG86MzQ==,iv:AOOCnf7+KbuVnK7BJhj6PmVpU1Kc7CM/GKOzqy/6Uc0=,tag:lF2P1pLHvgLb5rBpxxVSvQ==,type:str]
     SECRET_GHOST_PASS: ENC[AES256_GCM,data:AEYirPe8RWtLyo/GQPW9zt7iLmA=,iv:RH1dwvVv+QaG7m5FwfayWs/8BlrfpjAnHOR4CXSCQmE=,tag:7oTgyT7Qsi/SHHFjT1SMBw==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:zkpE8PKI/2si3ZwkTw==,iv:t9EYCs7N7YbVqtq6GMDUytazClH08RT4w5uD4swGho0=,tag:sgivAkgfq9H3he3+9GZD+w==,type:str]
+    SECRET_HASSIO_MQTT_PASSWORD: ENC[AES256_GCM,data:/DmkZdLUYY8CR+8f6thqHyn4708=,iv:bAdxLefFqOC1meulgaPLsRukdJn1Dm8gTUGGYgSwRGU=,tag:1GcHBBBWO0YMGDAUv+5lew==,type:str]
+    SECRET_HASSIO_MQTT_USERNAME: ENC[AES256_GCM,data:AuJq5aNp,iv:XjW+sBXUZSgam24Rwi8RcQUziHAktLbCn0OFJZ2TFSg=,tag:vNInAJQo+mqcnvU2F2kFSQ==,type:str]
     SECRET_KASTEN_BUCKET_PATH: ENC[AES256_GCM,data:bMER47cY4mNWW3aKKgppGVKjizH4ciz9K3FlIbUXM5zI5EdG7Xq4snAINoKnitvHknc=,iv:1QacuI87g41RXtWIu5g8DnAp5a6JjriJmM/BTBqQKnY=,tag:Y+LraoIlWNTFiZpujoKHLg==,type:str]
     SECRET_KASTEN_BUCKET: ENC[AES256_GCM,data:AezL6FDCHg==,iv:8b0QOwrs9iEJ8k11cO9MbnR4KLE9dDT+RrT+IpwmXlY=,tag:2NHWkTORXct7gUepRgVXYg==,type:str]
     SECRET_LOKI_ACCESS_KEY: ENC[AES256_GCM,data:a7mbL2+nVSdFgBy8EHQGH8/ZroHkpErIXQ==,iv:1pwhHJAjXOnD68MVEMG9rweNLZWf0RuoFr86A5Wcb4c=,tag:cDVsj52f8R/XsBLk98mhlg==,type:str]
     SECRET_LOKI_BUCKET: ENC[AES256_GCM,data:oTjdUOXNa4A=,iv:3lBSTgwCYMXeUjoTtx9Z7pArdha1CAau+0QRucq9m/o=,tag:aGRx9xYdfrSYKKAV8Fi2gA==,type:str]
     SECRET_LOKI_SECRET_KEY: ENC[AES256_GCM,data:bWtqSS0qbN2oh23qTIYauJI678CxKQuL30+Mk7fdYA==,iv:3/3/8IebRrPHV8zrZri59zca/D2j6IUeldUe8ZNVU/U=,tag:NfKIMvambbLam8Jvs+rdtA==,type:str]
-    SECRET_HASSIO_MQTT_PASSWORD: ENC[AES256_GCM,data:/DmkZdLUYY8CR+8f6thqHyn4708=,iv:bAdxLefFqOC1meulgaPLsRukdJn1Dm8gTUGGYgSwRGU=,tag:1GcHBBBWO0YMGDAUv+5lew==,type:str]
-    SECRET_HASSIO_MQTT_USERNAME: ENC[AES256_GCM,data:AuJq5aNp,iv:XjW+sBXUZSgam24Rwi8RcQUziHAktLbCn0OFJZ2TFSg=,tag:vNInAJQo+mqcnvU2F2kFSQ==,type:str]
     SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
     SECRET_S3_DOMAIN: ENC[AES256_GCM,data:iF2rQq90lZU8jAgb/NenyqWKLYJmnHeTwtQj,iv:FcYlX/1EtbvYbGp4O3o8XujVlxx7KX20I53G4HdpRM8=,tag:rfpPoIdBJaeMA6j2k8liTQ==,type:str]
     SECRET_S3_REGION: ENC[AES256_GCM,data:Zd4fjM1sy5mqp4w=,iv:+IpfWISxDJj9A80wUzV2pJTy0qZw5kwWUuGsH1pqJzw=,tag:siuH2IKHQElJaHH9CIMKVg==,type:str]
+    SECRET_TESLAMATE_DB_PASS: ENC[AES256_GCM,data:Jo2zYCMwA3Q7Io65pgkKJ2h+UWc=,iv:y3mFh4VW19RaLgB7NOtzP99erFKB9JPZd/SOzAX0FWc=,tag:+DNEOxUXcq4xWVayN0rIvQ==,type:str]
+    SECRET_TESLAMATE_DB_USER: ENC[AES256_GCM,data:hk1bt7sNr2s=,iv:f8ii0Wce555BL3+TGUjQySQLafIAPzlRmxhd4ptCD8w=,tag:JZMp72YgsR6hXJN9M78VNg==,type:str]
     SECRET_TESLAMATE_DB: ENC[AES256_GCM,data:mfj4fykKzEiB,iv:DMpGVcKTnfB6IbPCecE8OsBdzDmyjQnGZBI+7Vgicac=,tag:70eXceZsvwM477McUxrj1A==,type:str]
     SECRET_TESLAMATE_MQTT_PASSWORD: ENC[AES256_GCM,data:4GOCLUq6c11Q1oqp3qv7CJp2w/g=,iv:CzjUs5UPaKqkvnZAJAj4DzpeDbI6tFSBU/OYOMYhGDU=,tag:TT9ii7VZ8/nvQianOLhlgQ==,type:str]
     SECRET_TESLAMATE_MQTT_USERNAME: ENC[AES256_GCM,data:XzNdlwy0NefM,iv:aeKS1fEVED2BA72+85/r9hg+pvBcRkFcUQE2z5mQPOk=,tag:A/B1ARrUsgypRft94F1Anw==,type:str]
-    SECRET_TESLAMATE_PASS: ENC[AES256_GCM,data:IR8ZX3vubW7Hj6HN0sBeo/70+9A=,iv:WVjxqta2Nb6cyByuGzL5lXglZa1fHaTaA+RYNdSMJTU=,tag:lkHmOpgwrDUdcmA+xm2uTg==,type:str]
-    SECRET_TESLAMATE_USER: ENC[AES256_GCM,data:PVGnlihzyzo=,iv:gjMJ1f4435DkMuj7kNqCwwgDzap5McxEP/qcKjEO5Mo=,tag:NL9JSykIZYZ4S0sgG4iiRA==,type:str]
     SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:JIA388qNJDBwmU4167c2TWQu3A==,iv:FmXpzQe82wYJmU+SuTUENHmOCnHXP2SyCME1DyOaZa4=,tag:DO5FL61+0WNjyWAEhdX/bA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_PASS: ENC[AES256_GCM,data:RDJ3UIeZwzGIEag4VTZgczEwVSk=,iv:RZBJqnMl1iSnALodFCTS9EAkNy93vFzW6iTMWxgUB94=,tag:riNAFefsFIgt36GEhZ/7rA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_USER: ENC[AES256_GCM,data:c6yjOiaBg8mYSsTnB4bbjw==,iv:/vW0o+/iHNMK9l7E+OiKsmK2N7BUcODgkrHzLPtZJD4=,tag:h211xMSoLx0whXAmoa1umA==,type:str]
@@ -52,8 +52,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-28T16:51:22Z"
-    mac: ENC[AES256_GCM,data:U5XHIq4pk2v2ghXAsU9pXeX9laEm66kcfRYBKwnLIcxCTlRG6viuR5Vj/T3iI4TQQYJGQgwnycBTjnjvyV05nuUkhXvizbKHiEOIPFUcyKuRElNuy94xef5vEE212+vqJGOfGpmJR8aXXIZqBpWIRbxjyJtH3s2RsmupvhQfzpE=,iv:xMrEFlHKqpDVFD88iz8RBCTGEISOm0T/Y2E98OUXhRg=,tag:yrPtjCJYY8IGbD0lxQcIFw==,type:str]
+    lastmodified: "2022-04-28T17:38:14Z"
+    mac: ENC[AES256_GCM,data:VmKw3ZS7f1ht/yxqbkXDCwYjJWage0HfZEXmB/HVgr92TQAfjMmdU/iIDW5s1ngWdKK09vQ6WnS9IfrFkiSJukXnx4RMGKrQ7NYZ8IgKHcSHb+eqlhXBt4r/C/aXkWNvxqAk9bu6CpiCgRkzb1+B1xt0hMDOwf4IUO2s+FMvZTo=,iv:jsv+YJf5KniTAwms4gzkvhvPBZNaYqrxIsco0FwRDi4=,tag:+HFAQ49D4eNFcapRVLG5pA==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
