--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -56,8 +56,8 @@ spec:
     postgresql:
       enabled: true
       image:
-        postgresqlUsername: "${SECRET_TESLAMATE_USER}"
-        postgresqlPassword: "${SECRET_TESLAMATE_PASS}"
+        postgresqlUsername: "${SECRET_TESLAMATE_DB_USER}"
+        postgresqlPassword: "${SECRET_TESLAMATE_DB_PASS}"
         postgresqlDatabase: "${SECRET_TESLAMATE_DB}"
       persistence:
         enabled: true
