--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -84,6 +84,7 @@ spec:
             secureJsonData:
               password: "${SECRET_TESLAMATE_DB_PASS}"
             jsonData:
+              postgresVersion: 1000
               sslmode: disable
     dashboards:
       default:
