feat: add missing plugins for teslamate

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -130,6 +130,8 @@ spec:
       - vonage-status-panel
       - grafana-worldmap-panel
       - grafana-clock-panel
+      - panodata-map-panel
+      - natel-plotly-panel
     serviceMonitor:
       enabled: true
     ingress:
