feat: add missing plugins for teslamate

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -131,9 +131,9 @@ spec:
       - grafana-piechart-panel
       - grafana-worldmap-panel
       - natel-discrete-panel
+      - natel-plotly-panel
       - pr0ps-trackmap-panel
       - vonage-status-panel
-      # - panodata-map-panel
       - https://github.com/panodata/panodata-map-panel/releases/download/0.16.0/panodata-map-panel-0.16.0.zip;grafana-map-panel
     serviceMonitor:
       enabled: true
