--- a/cluster/apps/monitoring/unifi-poller/helm-release.yaml
+++ b/cluster/apps/monitoring/unifi-poller/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
       UP_UNIFI_DEFAULT_USER: "${SECRET_UP_UNIFI_DEFAULT_USER}"
       UP_UNIFI_DEFAULT_PASS: "${SECRET_UP_UNIFI_DEFAULT_PASS}"
       UP_UNIFI_DEFAULT_SAVE_SITES: true
-      UP_UNIFI_DEFAULT_SAVE_DPI: false
+      UP_UNIFI_DEFAULT_SAVE_DPI: true
       UP_INFLUXDB_DISABLE: true
       UP_PROMETHEUS_DISABLE: false
       UP_PROMETHEUS_NAMESPACE: "unifipoller"
