--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -1,13 +1,23 @@
 {
   "packageRules": [
     {
-      "matchDatasources": ["docker", "github-tags"],
+      "matchDatasources": [
+        "docker",
+        "github-actions",
+        "github-releases",
+        "github-tags",
+        "helm"
+      ],
       "automerge": true,
       "automergeType": "branch",
       "requiredStatusChecks": null,
-      "matchUpdateTypes": ["minor", "patch"],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
       "matchPackageNames": [
         "ghcr.io/k8s-at-home/prowlarr-nightly",
+        "lycheeverse/lychee-action",
         "renovatebot/github-action"
       ]
     }
