--- a/ansible/router/roles/os.router/tasks/packages.yml
+++ b/ansible/router/roles/os.router/tasks/packages.yml
@@ -1,5 +1,4 @@
 ---
-
 #
 # This role is not entirely idemponent
 #
@@ -26,7 +25,7 @@
       - security/cyrus-sasl2
       - security/cyrus-sasl2-gssapi
       - sysutils/htop
-      # - sysutils/neofetch
+      - sysutils/neofetch
       - sysutils/screen
       - sysutils/tmux
       - sysutils/viddy
@@ -34,7 +33,6 @@
       # - textproc/go-yq
       - textproc/jq
     state: present
-
 # # If needed these ports below take way too long to
 # # compile (or fail) and should be done manually
 # - name: Update Ports and Tools
