debug: dual renovate issues

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -14,7 +14,7 @@
     "github>claughinghouse/home-ops//.github/renovate/semanticCommits.json5"
   ],
   "platform": "github",
-  "username": "midnight-bot[bot]",
+  "username": "midnight-bot-6658[bot]",
   "repositories": [
     "claughinghouse/home-ops"
   ],
