chore: spring cleaning

--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -5,5 +5,8 @@ resources:
   - cert-manager
   - external-snapshotter
   - kube-prometheus-stack
-  # TODO: [rook-ceph] Enable CRDs on next rebuild
-  - rook-ceph
+  - kyverno
+  - system-upgrade-controller
+  - starboard
+  # TODO(rook-ceph): Enable CRDs on next rebuild
+  # - rook-ceph
