--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -2,16 +2,21 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - aqua-charts.yaml
   - bitnami-charts.yaml
   - deliveryhero-charts.yaml
+  - descheduler-charts.yaml
   - emberstack-charts.yaml
+  - external-dns-charts.yaml
+  - fairwinds-charts.yaml
+  - falco-security-charts.yaml
   - grafana-charts.yaml
   - ingress-nginx-charts.yaml
   - jetstack-charts.yaml
   - k8s-at-home-charts.yaml
+  - k8tz-charts.yaml
   - kasten-charts.yaml
-  - descheduler-charts.yaml
-  - external-dns-charts.yaml
+  - kyverno-charts.yaml
   - metrics-server-charts.yaml
   - nfs-subdir-external-provisioner-charts.yaml
   - node-feature-discovery-charts.yaml
