--- a/cluster/core/namespaces/kube-system.yaml
+++ b/cluster/core/namespaces/kube-system.yaml
@@ -3,3 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: kube-system
+  labels:
+    goldilocks.fairwinds.com/enabled: "true"
+    k10.kasten.io/ignorebackuppolicy: "true"
