--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -8,7 +8,10 @@ resources:
   - home.yaml
   - kasten-io.yaml
   - kube-system.yaml
+  - kyverno.yaml
   - media.yaml
   - monitoring.yaml
   - networking.yaml
   - rook-ceph.yaml
+  - starboard-system.yaml
+  - system-upgrade.yaml
