--- a/cluster/core/namespaces/rook-ceph.yaml
+++ b/cluster/core/namespaces/rook-ceph.yaml
@@ -3,3 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: rook-ceph
+  labels:
+    goldilocks.fairwinds.com/enabled: "true"
+    k10.kasten.io/ignorebackuppolicy: "true"
