--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -3,8 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - blackbox-exporter
+  - goldilocks
   - grafana
-  - karma
   - kube-prometheus-stack
   - loki
   - node-problem-detector
@@ -12,3 +12,4 @@ resources:
   - unifi-poller
   # - uptimerobot-heartbeat
   - vector
+  - vpa
