--- a/cluster/apps/monitoring/vector/agent/helm-release.yaml
+++ b/cluster/apps/monitoring/vector/agent/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: vector
-      version: 0.10.3
+      version: 0.10.2
       sourceRef:
         kind: HelmRepository
         name: vector-charts
@@ -36,6 +36,14 @@ spec:
           journal_directory: /var/log/journal
         kubernetes_logs:
           type: kubernetes_logs
+          pod_annotation_fields:
+            container_image: "container_image"
+            container_name: "container_name"
+            pod_annotations: "pod_annotations"
+            pod_labels: "pod_labels"
+            pod_name: "pod_name"
+        vector_metrics:
+          type: internal_metrics
       # Sinks
       sinks:
         loki_journal_sink:
@@ -50,10 +58,17 @@ spec:
             - kubernetes_logs
           address: vector-aggregator:6010
           version: "2"
+        prometheus_sink:
+          type: prometheus_exporter
+          inputs:
+            - vector_metrics
+          address: 0.0.0.0:9090
     service:
       enabled: false
     podMonitor:
       enabled: true
+      jobLabel: vector-agent
+      port: prometheus-sink
     securityContext:
       privileged: true
     tolerations:
