--- a/cluster/apps/monitoring/vector/geoipupdate/kustomization.yaml
+++ b/cluster/apps/monitoring/vector/geoipupdate/kustomization.yaml
@@ -2,4 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
+  - cron-job.yaml
+  - config-pvc.yaml
+  - secret.sops.yaml
