--- a/cluster/apps/media/lidarr/helm-release.yaml
+++ b/cluster/apps/media/lidarr/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/lidarr-nightly
-      tag: v1.0.0.2570
+      tag: v1.0.0.2569
     env:
       TZ: "${TIMEZONE}"
     ingress:
@@ -46,10 +46,10 @@ spec:
     metrics:
       enabled: true
       serviceMonitor:
-        interval: 3m
+        interval: 5m
         scrapeTimeout: 1m
       prometheusRule:
-        enabled: true
+        enabled: false
       exporter:
         image:
           repository: ghcr.io/onedr0p/exportarr
@@ -76,7 +76,7 @@ spec:
         readOnly: false
     resources:
       requests:
+        cpu: 100m
         memory: 250Mi
-        cpu: 500m
       limits:
         memory: 2000Mi
