--- a/cluster/apps/media/radarr-uhd/helm-release.yaml
+++ b/cluster/apps/media/radarr-uhd/helm-release.yaml
@@ -46,18 +46,18 @@ spec:
     metrics:
       enabled: true
       serviceMonitor:
-        interval: 3m
+        interval: 5m
         scrapeTimeout: 1m
       prometheusRule:
-        enabled: true
-      # exporter:
-      #   image:
-      #     repository: ghcr.io/onedr0p/exportarr
-      #     tag: v1.0.0
-      #   env:
-      #     port: 9794
-      #     additionalMetrics: true
-      #     unknownQueueItems: true
+        enabled: false
+      exporter:
+        image:
+          repository: ghcr.io/onedr0p/exportarr
+          tag: v1.0.0
+        env:
+          port: 9794
+          additionalMetrics: true
+          unknownQueueItems: true
     persistence:
       config:
         enabled: true
@@ -76,7 +76,7 @@ spec:
         readOnly: false
     resources:
       requests:
+        cpu: 100m
         memory: 250Mi
-        cpu: 500m
       limits:
         memory: 2000Mi
