--- a/cluster/apps/media/trash-updater/trash.yaml
+++ b/cluster/apps/media/trash-updater/trash.yaml
@@ -11,28 +11,32 @@
 sonarr:
   - base_url: http://sonarr:8989
     api_key: ${SONARR_APIKEY}
-    quality_definition: series
+    quality_definition: hybrid
     release_profiles:
       - type: series
 
   - base_url: http://sonarr-uhd:8989
     api_key: ${SONARR_UHD_APIKEY}
-    quality_definition: series
+    quality_definition: hybrid
     release_profiles:
       - type: series
 
 radarr:
   - base_url: http://radarr:7878
     api_key: ${RADARR_APIKEY}
+    delete_old_custom_formats: true
     quality_definition:
       type: movie
-      prefered_ratio: 0.5
-    delete_old_formats: true
+      preferred_ratio: 0.5
     custom_formats:
       - trash_ids:
           - ff5bc9e8ce91d46c997ca3ac6994d6f8 # UHD FraMeSToR (set to 0, 1 or 3200)
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|1080p
+          - name: Any
+            score: 1
+          - name: HD
+            score: 1
+          - name: SD
             score: 1
       - trash_ids:
           - 496f355514737f7d83bf7aa4d24f8169 # TrueHD Atmos
@@ -83,30 +87,43 @@ radarr:
           - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup removed do avoid multiple downloads
           - dc98083864ea246d05a42df0d05f81cc # x265 (720/1080p)
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|1080p
+          - name: Any
+            reset_unmatched_scores: true
+          - name: HD
+            reset_unmatched_scores: true
+          - name: SD
             reset_unmatched_scores: true
       - trash_ids:
           - 1c7d7b04b15cc53ea61204bebbcc1ee2 # HQ
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|1080p
+          - name: Any
+            score: 0
+          - name: HD
+            score: 0
+          - name: SD
             score: 0
       - trash_ids:
           - 4b900e171accbfb172729b63323ea8ca # Optional: Multi
           - 923b6abef9b17f937fab56cfcf89e1f1 # Optional: DV (WEBDL) without fallback to HDR, set to manual score 0 or -10000
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|1080p
+          - name: Any
+            score: 0
+          - name: HD
+            score: 0
+          - name: SD
             score: 0
 
   - base_url: http://radarr-uhd:7878
     api_key: ${RADARR_UHD_APIKEY}
+    delete_old_custom_formats: true
     quality_definition:
       type: movie
-    delete_old_formats: true
+      preferred_ratio: 0.5
     custom_formats:
       - trash_ids:
           - ff5bc9e8ce91d46c997ca3ac6994d6f8 # UHD FraMeSToR (set to 0, 1 or 3200)
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|2160p
+          - name: UHD
             score: 1
       - trash_ids:
           - 496f355514737f7d83bf7aa4d24f8169 # TrueHD Atmos
@@ -157,16 +174,16 @@ radarr:
           - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup removed do avoid multiple downloads
           - dc98083864ea246d05a42df0d05f81cc # x265 (720/1080p)
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|2160p
+          - name: UHD
             reset_unmatched_scores: true
       - trash_ids:
           - 1c7d7b04b15cc53ea61204bebbcc1ee2 # HQ
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|2160p
+          - name: UHD
             score: 0
       - trash_ids:
           - 4b900e171accbfb172729b63323ea8ca # Optional: Multi
           - 923b6abef9b17f937fab56cfcf89e1f1 # Optional: DV (WEBDL) without fallback to HDR, set to manual score 0 or -10000
         quality_profiles:
-          - name: WEBDL|Remux|Bluray|2160p
+          - name: UHD
             score: 0
