--- a/cluster/apps/media/unpackerr/helm-release.yaml
+++ b/cluster/apps/media/unpackerr/helm-release.yaml
@@ -2,14 +2,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: unpackerr
+  name: &app unpackerr
   namespace: media
 spec:
   interval: 5m
   chart:
     spec:
-      chart: unpackerr
-      version: 5.3.1
+      chart: kah-common-chart
+      version: 1.1.1
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -18,11 +18,12 @@ spec:
   install:
     createNamespace: true
   values:
+    fullnameOverride: *app
     image:
       repository: docker.io/golift/unpackerr
       tag: 0.9.9
     env:
-      TZ: "America/New_York"
+      TZ: "${TIMEZONE}"
       UN_SONARR_0_URL: http://sonarr:8989
       UN_SONARR_0_PATHS_0: /complete/sonarr
       UN_SONARR_1_URL: http://sonarr-uhd:8989
@@ -37,7 +38,18 @@ spec:
       UN_READARR_0_PATHS_0: /complete/readarr
     envFrom:
       - secretRef:
-          name: unpackerr
+          name: *app
+    service:
+      main:
+        enabled: false
+    # TODO(unpackerr): Write probes to check for something to tell if it's working
+    probes:
+      liveness:
+        enabled: false
+      readiness:
+        enabled: false
+      startup:
+        enabled: false
     persistence:
       config:
         enabled: false
@@ -46,9 +58,11 @@ spec:
         type: hostPath
         hostPath: /mnt/media/sabnzbd/complete
         mountPath: /complete
+    podAnnotations:
+      secret.reloader.stakater.com/reload: *app
     resources:
       requests:
+        cpu: 100m
         memory: 250Mi
-        cpu: 500m
       limits:
-        memory: 750Mi
+        memory: 1000Mi
