chore: spring cleaning

--- a/cluster/apps/kube-system/descheduler/helm-release.yaml
+++ b/cluster/apps/kube-system/descheduler/helm-release.yaml
@@ -19,10 +19,16 @@ spec:
     createNamespace: true
   values:
     kind: Deployment
+    # TODO(descheduler): scale app on next app release
+    # replicas: 3
+    # leaderElection:
+    #   enabled: true
     deschedulerPolicy:
       strategies:
         RemoveDuplicates:
-          enabled: false
+          enabled: true
+        RemovePodsViolatingNodeTaints:
+          enabled: true
         RemovePodsViolatingNodeAffinity:
           enabled: true
           params:
@@ -38,3 +44,19 @@ spec:
             nodeFit: true
         LowNodeUtilization:
           enabled: false
+        RemoveFailedPods:
+          enabled: true
+          params:
+            failedPods:
+              includingInitContainers: true
+              excludeOwnerKinds:
+                - "Job"
+              minPodLifetimeSeconds: 3600
+        RemovePodsHavingTooManyRestarts:
+          enabled: true
+          params:
+            podsHavingTooManyRestarts:
+              podRestartThreshold: 100
+              includingInitContainers: true
+    podAnnotations:
+      configmap.reloader.stakater.com/reload: "descheduler"
