--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -72,8 +72,8 @@ spec:
       codeserver:
         enabled: true
         image:
-          repository: ghcr.io/k8s-at-home/code-server
-          tag: v4.3.0
+          repository: docker.io/codercom/code-server
+          tag: 4.3.0
         env:
           TZ: "${TIMEZONE}"
         git:
@@ -103,6 +103,6 @@ spec:
     resources:
       requests:
         cpu: 100m
-        memory: 100Mi
+        memory: 250Mi
       limits:
-        memory: 4000Mi
+        memory: 2000Mi
