--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -43,8 +43,8 @@ spec:
         mountPath: "/data"
     resources:
       requests:
-        memory: 100Mi
         cpu: 100m
+        memory: 250Mi
       limits:
         memory: 500Mi
     # These config values are not what is my current state of zigbee2mqtt
@@ -58,8 +58,8 @@ spec:
       mqtt:
         base_topic: zigbee2mqtt
         server: "mqtt://mosquitto"
-        user: "${SECRET_ZIGBEE_MQTT_USERNAME}"
-        password: "${SECRET_ZIGBEE_MQTT_PASSWORD}"
+        user: "${SECRET_MQTT_USERNAME}"
+        password: "${SECRET_MQTT_PASSWORD}"
       serial:
         port: "tcp://192.168.1.90:6638"
       advanced:
