fix: secret typo

--- a/cluster/apps/monitoring/vector/geoipupdate/secret.sops.yaml
+++ b/cluster/apps/monitoring/vector/geoipupdate/secret.sops.yaml
@@ -6,7 +6,7 @@ metadata:
     namespace: monitoring
 type: Opaque
 stringData:
-    GEOIPUPDATE_ACCOUNT_ID: ENC[AES256_GCM,data:pSTcovWQ,iv:t/KABNrK6OujDsJiJHvBKoVp3X8iRUFVFXvsuJS6U4w=,tag:TxySMaDDSPZ+QCWfMqdNhA==,type:int]
+    GEOIPUPDATE_ACCOUNT_ID: ENC[AES256_GCM,data:XW5HNmgl,iv:+ArB336PK/0bJVdhvgYvaaP9A1jW8+sYITcpAFCxe1I=,tag:T8ROF1qY3Er80w2L9y1NcQ==,type:str]
     GEOIPUPDATE_LICENSE_KEY: ENC[AES256_GCM,data:hYJG7kPYAJGKIt/6yG8qTg==,iv:WQXgYIOIDE05ejWLuOQka/YmLZKSrYVOC1S1ksqwzXg=,tag:du31vNwhaqhMmJoCXDEnpA==,type:str]
 sops:
     kms: []
@@ -26,8 +26,8 @@ sops:
             bzBKZVIyNTJPcm15Z3lWVnJCTytENWMKXtcIKZ5d2D7QXB3viRzN05E+uh2xf/6Z
             8TnyW1fZTDROFDxxW5drlKBSWtopbyxbyxzD55laQIa8x/ILLJQXfw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-06T19:51:28Z"
-    mac: ENC[AES256_GCM,data:rUu9FpOzo8N0iZVTA1cD3Jli7ykv1X5mJ1rdA3A/iaoWuohbJgecmo0XpbfAhbqlsv3aqUmRRxqeDTh9kewG7vq+VtW2+oNMILIfHCcda0Q08H26N3QBrodyg3oMXQWYHd8Da41Ky2J7Ka4wOfGfG8EtxwOM7G+oC4XDZAEPfx8=,iv:j1D26+Nm0YQDimR45u8iLJqfo09QcUbgH/Tm5xqaSVQ=,tag:ReXPqFu2MdCN5CfftEsP8A==,type:str]
+    lastmodified: "2022-05-06T21:19:22Z"
+    mac: ENC[AES256_GCM,data:tBWp0AmgjtPd9cjJz47Fb3rJN0Ag1DYIieDAcK+FKr62sIh8bv6rfZv9SwUJMd3L8AIRct9FDgaxcNq/cEUjky4p3e2Ji/SVmM0wZcVDGpYSH8927u3zCCEwA1vPUQOQZOYt/HGLl2Q7kzBYyUqYHfldnT+RYSflTHL6rY/pMgQ=,iv:KqSSALdhWB5b7sJhfhqfJeWCX64N5XEAm6etIGBUYdo=,tag:l5x/hGWOT/NQnvB/k8/pTA==,type:str]
     pgp:
         - created_at: "2022-05-06T19:49:50Z"
           enc: |
