--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -3,12 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cert-manager
-  - default
+  # - default
   - flux-system
-  - home
+  # - home
   - kasten-io
   - kube-system
-  - media
+  # - media
   - monitoring
   - networking
   - rook-ceph
