fix: restore cluster

--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   - system-upgrade-controller
   - starboard
   # TODO(rook-ceph): Enable CRDs on next rebuild
-  # - rook-ceph
+  - rook-ceph
