--- a/cluster/core/rook-ceph/operator/helm-release.yaml
+++ b/cluster/core/rook-ceph/operator/helm-release.yaml
@@ -17,7 +17,7 @@ spec:
         namespace: flux-system
   install:
     createNamespace: true
-    crds: CreateReplace
+    # crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
