--- a/cluster/core/rook-ceph/operator/helm-release.yaml
+++ b/cluster/core/rook-ceph/operator/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
     remediation:
       retries: 3
   upgrade:
-    crds: CreateReplace
+    # crds: CreateReplace
     remediation:
       retries: 3
   dependsOn:
