--- a/cluster/core/rook-ceph/operator/helm-release.yaml
+++ b/cluster/core/rook-ceph/operator/helm-release.yaml
@@ -17,11 +17,11 @@ spec:
         namespace: flux-system
   install:
     createNamespace: true
-    crds: CreateReplace
+    # crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
-    crds: CreateReplace
+    # crds: CreateReplace
     remediation:
       retries: 3
   dependsOn:
