--- a/cluster/core/rook-ceph/operator/helm-release.yaml
+++ b/cluster/core/rook-ceph/operator/helm-release.yaml
@@ -33,8 +33,8 @@ spec:
     csi:
       enableCephfsDriver: true
       enableCephfsSnapshotter: true
-    monitoring:
-      enabled: true
+    # monitoring:
+    #   enabled: true
     resources:
       requests:
         cpu: 100m
