--- a/cluster/core/rook-ceph/operator/helm-release.yaml
+++ b/cluster/core/rook-ceph/operator/helm-release.yaml
@@ -28,8 +28,8 @@ spec:
     - name: cert-manager
       namespace: cert-manager
   values:
-    # crds:
-    #   enabled: true
+    crds:
+      enabled: false
     csi:
       enableCephfsDriver: true
       enableCephfsSnapshotter: true
