--- a/cluster/core/rook-ceph/operator/cluster-external.yaml
+++ b/cluster/core/rook-ceph/operator/cluster-external.yaml
@@ -20,10 +20,10 @@ spec:
   # optionally, the ceph-mgr IP address can be passed to gather metric from the prometheus exporter
   monitoring:
     enabled: true
-    rulesNamespace: rook-ceph
-    externalMgrEndpoints:
-      - ip: "10.1.5.201"
-      - ip: "10.1.5.202"
-      - ip: "10.1.5.203"
-      - ip: "10.1.5.204"
-    externalMgrPrometheusPort: 9283
+  #   rulesNamespace: rook-ceph
+  #   externalMgrEndpoints:
+  #     - ip: "10.1.5.201"
+  #     - ip: "10.1.5.202"
+  #     - ip: "10.1.5.203"
+  #     - ip: "10.1.5.204"
+  #   externalMgrPrometheusPort: 9283
